--- a/Sources/Playback/Player/MiniPlayer-iOS/AudioMiniPlayer.xib
+++ b/Sources/Playback/Player/MiniPlayer-iOS/AudioMiniPlayer.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,8 +18,6 @@
                 <outlet property="nextButton" destination="eyt-Pj-hU6" id="bWI-0V-wbd"/>
                 <outlet property="playPauseButton" destination="2Kp-xd-t2N" id="gXw-IZ-eUx"/>
                 <outlet property="previousButton" destination="vGQ-hi-1Xa" id="Bgj-PO-d94"/>
-                <outlet property="previousNextImage" destination="hlW-Fp-grY" id="G9v-xz-1Aw"/>
-                <outlet property="previousNextOverlay" destination="P5g-cO-YBI" id="nOU-Pe-PCd"/>
                 <outlet property="progressBarView" destination="IcU-Lc-kf0" id="2nw-wK-b2u"/>
                 <outlet property="repeatButton" destination="Hmp-0g-6lI" id="Vka-8W-o60"/>
                 <outlet property="shuffleButton" destination="iPM-8E-rgI" id="5GS-gv-Ccw"/>
@@ -171,23 +168,6 @@
                     </constraints>
                     <color key="progressTintColor" red="1" green="0.53333333329999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </progressView>
-                <view hidden="YES" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P5g-cO-YBI">
-                    <rect key="frame" x="0.0" y="0.0" width="360" height="56"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hlW-Fp-grY">
-                            <rect key="frame" x="155.5" y="3.5" width="49" height="49"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="hlW-Fp-grY" secondAttribute="height" multiplier="1:1" id="dkn-aw-Hue"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="bottom" secondItem="hlW-Fp-grY" secondAttribute="bottom" constant="3.5" id="1M7-xq-w6J"/>
-                        <constraint firstItem="hlW-Fp-grY" firstAttribute="top" secondItem="P5g-cO-YBI" secondAttribute="top" constant="3.5" id="7BS-wJ-FgF"/>
-                        <constraint firstItem="hlW-Fp-grY" firstAttribute="centerX" secondItem="P5g-cO-YBI" secondAttribute="centerX" id="scd-Fx-H8e"/>
-                    </constraints>
-                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="3Tx-iI-Z1w"/>
             <color key="backgroundColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.17254901960784313" alpha="1" colorSpace="calibratedRGB"/>
@@ -202,15 +182,11 @@
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="bottom" secondItem="3Tx-iI-Z1w" secondAttribute="bottom" id="Hus-YA-7OT"/>
                 <constraint firstItem="3Tx-iI-Z1w" firstAttribute="bottom" secondItem="IcU-Lc-kf0" secondAttribute="bottom" id="JjL-JW-hai"/>
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="top" secondItem="uF1-VS-Gss" secondAttribute="top" id="O7B-dV-SxH"/>
-                <constraint firstItem="3Tx-iI-Z1w" firstAttribute="trailing" secondItem="P5g-cO-YBI" secondAttribute="trailing" id="Q2m-jf-aVB"/>
-                <constraint firstItem="P5g-cO-YBI" firstAttribute="top" secondItem="uF1-VS-Gss" secondAttribute="top" id="aOU-eg-A81"/>
-                <constraint firstItem="P5g-cO-YBI" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="bPR-q6-RXm"/>
                 <constraint firstItem="uX3-fg-RRU" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="dfp-wu-gC9"/>
                 <constraint firstItem="sE6-yx-yZZ" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="eRm-cG-wQr"/>
                 <constraint firstAttribute="top" secondItem="sE6-yx-yZZ" secondAttribute="top" id="ecR-0u-ELR"/>
                 <constraint firstItem="uX3-fg-RRU" firstAttribute="bottom" secondItem="3Tx-iI-Z1w" secondAttribute="bottom" id="mHe-KV-OSD"/>
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="trailing" secondItem="3Tx-iI-Z1w" secondAttribute="trailing" id="r99-eL-3My"/>
-                <constraint firstItem="3Tx-iI-Z1w" firstAttribute="bottom" secondItem="P5g-cO-YBI" secondAttribute="bottom" id="wl2-AU-xgz"/>
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="yEd-Pp-1Pf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -221,7 +197,7 @@
         </view>
         <panGestureRecognizer minimumNumberOfTouches="1" id="bXF-pN-btw">
             <connections>
-                <action selector="didDrag:" destination="-1" id="cZm-NF-Zxj"/>
+                <action selector="didDragAudioMiniPlayer:" destination="-1" id="cZm-NF-Zxj"/>
             </connections>
         </panGestureRecognizer>
         <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="RZE-7i-aax">
@@ -235,14 +211,6 @@
             </connections>
         </tapGestureRecognizer>
     </objects>
-    <designables>
-        <designable name="aAs-Lc-dt8">
-            <size key="intrinsicContentSize" width="35.5" height="17"/>
-        </designable>
-        <designable name="cVn-oI-gin">
-            <size key="intrinsicContentSize" width="31" height="14.5"/>
-        </designable>
-    </designables>
     <resources>
         <image name="MiniNext" width="24" height="24"/>
         <image name="MiniPause" width="24" height="24"/>
