--- a/Sources/Playback/Player/MiniPlayer-iOS/AudioMiniPlayer.xib
+++ b/Sources/Playback/Player/MiniPlayer-iOS/AudioMiniPlayer.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,18 +11,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AudioMiniPlayer" customModule="VLC">
             <connections>
-                <outlet property="artistLabel" destination="cVn-oI-gin" id="i0Q-YH-XOJ"/>
                 <outlet property="artworkBlurImageView" destination="sE6-yx-yZZ" id="HJA-IE-LJQ"/>
                 <outlet property="artworkBlurView" destination="uX3-fg-RRU" id="SQX-RZ-tzG"/>
                 <outlet property="artworkImageView" destination="kd1-oF-bvh" id="2vA-3k-DNW"/>
                 <outlet property="audioMiniPlayer" destination="uF1-VS-Gss" id="KY2-QZ-jcK"/>
+                <outlet property="mediaInfoCollectionView" destination="LyW-tt-rlV" id="SIn-Tm-PWb"/>
                 <outlet property="nextButton" destination="eyt-Pj-hU6" id="bWI-0V-wbd"/>
                 <outlet property="playPauseButton" destination="2Kp-xd-t2N" id="gXw-IZ-eUx"/>
                 <outlet property="previousButton" destination="vGQ-hi-1Xa" id="Bgj-PO-d94"/>
                 <outlet property="progressBarView" destination="IcU-Lc-kf0" id="2nw-wK-b2u"/>
                 <outlet property="repeatButton" destination="Hmp-0g-6lI" id="Vka-8W-o60"/>
                 <outlet property="shuffleButton" destination="iPM-8E-rgI" id="5GS-gv-Ccw"/>
-                <outlet property="titleLabel" destination="aAs-Lc-dt8" id="Ze5-Us-djK"/>
+                <outlet property="stopImageView" destination="HxJ-VD-eH2" id="tDd-Fy-P6r"/>
+                <outlet property="stopOverlay" destination="M11-ot-hdI" id="y67-mU-jQ6"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -56,27 +58,23 @@
                                         <constraint firstAttribute="width" secondItem="kd1-oF-bvh" secondAttribute="height" multiplier="1:1" id="Ng5-MP-Y4e"/>
                                     </constraints>
                                 </imageView>
-                                <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="oUj-fd-nuu" userLabel="InfoStackView">
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyW-tt-rlV">
                                     <rect key="frame" x="68" y="0.0" width="124" height="56"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAs-Lc-dt8" userLabel="Title" customClass="VLCMarqueeLabel" customModule="VLC" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="20" width="124" height="16.5"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVn-oI-gin" userLabel="Artist" customClass="VLCMarqueeLabel" customModule="VLC" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="40.5" width="124" height="14.5"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" systemColor="lightTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="1" right="0.0"/>
-                                </stackView>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Xij-PI-vdK" customClass="MiniPlayerInfoCollectionViewFlowLayout" customModule="VLC" customModuleProvider="target">
+                                        <size key="itemSize" width="128" height="128"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                </collectionView>
                             </subviews>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="LyW-tt-rlV" secondAttribute="trailing" id="00h-Hb-7dn"/>
+                                <constraint firstAttribute="bottom" secondItem="LyW-tt-rlV" secondAttribute="bottom" id="ZAG-7z-TAN"/>
+                                <constraint firstItem="LyW-tt-rlV" firstAttribute="top" secondItem="KRl-hk-ICS" secondAttribute="top" id="g3c-cL-mN6"/>
+                            </constraints>
                             <connections>
                                 <outletCollection property="gestureRecognizers" destination="brR-fc-lZO" appends="YES" id="Nb4-rh-jQL"/>
                             </connections>
@@ -160,6 +158,23 @@
                         </stackView>
                     </subviews>
                 </stackView>
+                <view hidden="YES" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M11-ot-hdI" userLabel="Stop Overlay">
+                    <rect key="frame" x="0.0" y="0.0" width="360" height="56"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HxJ-VD-eH2" userLabel="Stop Icon Image View">
+                            <rect key="frame" x="155.5" y="3.5" width="49" height="49"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="HxJ-VD-eH2" secondAttribute="height" multiplier="1:1" id="s5q-8D-40H"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="HxJ-VD-eH2" firstAttribute="centerX" secondItem="M11-ot-hdI" secondAttribute="centerX" id="3p9-JH-HzO"/>
+                        <constraint firstItem="HxJ-VD-eH2" firstAttribute="top" secondItem="M11-ot-hdI" secondAttribute="top" constant="3.5" id="Qix-XC-ZD4"/>
+                        <constraint firstAttribute="bottom" secondItem="HxJ-VD-eH2" secondAttribute="bottom" constant="3.5" id="sjz-OX-xGE"/>
+                    </constraints>
+                </view>
                 <progressView opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="IcU-Lc-kf0">
                     <rect key="frame" x="0.0" y="54" width="360" height="3"/>
                     <color key="backgroundColor" red="0.1461089551448822" green="0.16114577651023865" blue="0.17342603206634521" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -176,24 +191,28 @@
                 <constraint firstItem="3Tx-iI-Z1w" firstAttribute="trailing" secondItem="IcU-Lc-kf0" secondAttribute="trailing" id="44K-9n-8Hd"/>
                 <constraint firstAttribute="top" secondItem="uX3-fg-RRU" secondAttribute="top" id="4ih-ff-blx"/>
                 <constraint firstItem="IcU-Lc-kf0" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="5ZP-iU-inp"/>
+                <constraint firstItem="3Tx-iI-Z1w" firstAttribute="trailing" secondItem="M11-ot-hdI" secondAttribute="trailing" id="76k-VU-Umq"/>
                 <constraint firstItem="3Tx-iI-Z1w" firstAttribute="trailing" secondItem="uX3-fg-RRU" secondAttribute="trailing" id="DDl-xP-azd"/>
                 <constraint firstItem="sE6-yx-yZZ" firstAttribute="trailing" secondItem="3Tx-iI-Z1w" secondAttribute="trailing" id="E4z-tf-aDv"/>
                 <constraint firstItem="3Tx-iI-Z1w" firstAttribute="bottom" secondItem="sE6-yx-yZZ" secondAttribute="bottom" id="HN7-Pp-hah"/>
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="bottom" secondItem="3Tx-iI-Z1w" secondAttribute="bottom" id="Hus-YA-7OT"/>
+                <constraint firstAttribute="bottom" secondItem="M11-ot-hdI" secondAttribute="bottom" id="JG9-Zd-2Py"/>
                 <constraint firstItem="3Tx-iI-Z1w" firstAttribute="bottom" secondItem="IcU-Lc-kf0" secondAttribute="bottom" id="JjL-JW-hai"/>
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="top" secondItem="uF1-VS-Gss" secondAttribute="top" id="O7B-dV-SxH"/>
                 <constraint firstItem="uX3-fg-RRU" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="dfp-wu-gC9"/>
+                <constraint firstItem="M11-ot-hdI" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="e1r-Ez-rgW"/>
                 <constraint firstItem="sE6-yx-yZZ" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="eRm-cG-wQr"/>
                 <constraint firstAttribute="top" secondItem="sE6-yx-yZZ" secondAttribute="top" id="ecR-0u-ELR"/>
                 <constraint firstItem="uX3-fg-RRU" firstAttribute="bottom" secondItem="3Tx-iI-Z1w" secondAttribute="bottom" id="mHe-KV-OSD"/>
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="trailing" secondItem="3Tx-iI-Z1w" secondAttribute="trailing" id="r99-eL-3My"/>
+                <constraint firstItem="M11-ot-hdI" firstAttribute="top" secondItem="uF1-VS-Gss" secondAttribute="top" id="wL9-xx-4OS"/>
                 <constraint firstItem="ciB-dn-lxu" firstAttribute="leading" secondItem="3Tx-iI-Z1w" secondAttribute="leading" id="yEd-Pp-1Pf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outletCollection property="gestureRecognizers" destination="bXF-pN-btw" appends="YES" id="Z5f-6D-vp5"/>
             </connections>
-            <point key="canvasLocation" x="49.600000000000001" y="75.562218890554732"/>
+            <point key="canvasLocation" x="46" y="-13"/>
         </view>
         <panGestureRecognizer minimumNumberOfTouches="1" id="bXF-pN-btw">
             <connections>
@@ -219,8 +238,5 @@
         <image name="iconRepeat" width="24" height="24"/>
         <image name="no-artwork" width="300" height="300"/>
         <image name="shuffle" width="24" height="24"/>
-        <systemColor name="lightTextColor">
-            <color white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
