AudioMiniPlayer: Fix continuous scrolling for repeat mode and update layout
This should enable inifinite scrolling when repeat mode is on. Forcing
Mini player UI to be LTR to avoid ambiguity that could happen.

--- a/Sources/Playback/Player/MiniPlayer-iOS/AudioMiniPlayer.xib
+++ b/Sources/Playback/Player/MiniPlayer-iOS/AudioMiniPlayer.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,7 +27,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="AudioMiniPlayer" id="uF1-VS-Gss" userLabel="AudioMiniPlayer">
+        <view contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" restorationIdentifier="AudioMiniPlayer" id="uF1-VS-Gss" userLabel="AudioMiniPlayer">
             <rect key="frame" x="0.0" y="0.0" width="360" height="56"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -45,10 +45,10 @@
                     </view>
                     <blurEffect style="dark"/>
                 </visualEffectView>
-                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ciB-dn-lxu" userLabel="Mini Player Content Stack View">
+                <stackView opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" translatesAutoresizingMaskIntoConstraints="NO" id="ciB-dn-lxu" userLabel="Mini Player Content Stack View">
                     <rect key="frame" x="0.0" y="0.0" width="360" height="56"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="KRl-hk-ICS" userLabel="Info Stack View">
+                        <stackView opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="KRl-hk-ICS" userLabel="Info Stack View">
                             <rect key="frame" x="0.0" y="0.0" width="192" height="56"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-artwork" translatesAutoresizingMaskIntoConstraints="NO" id="kd1-oF-bvh" userLabel="Art">
@@ -58,7 +58,7 @@
                                         <constraint firstAttribute="width" secondItem="kd1-oF-bvh" secondAttribute="height" multiplier="1:1" id="Ng5-MP-Y4e"/>
                                     </constraints>
                                 </imageView>
-                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyW-tt-rlV">
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyW-tt-rlV">
                                     <rect key="frame" x="68" y="0.0" width="124" height="56"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
